--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
@@ -36,3 +36,4 @@ ul {
 li {
   margin-bottom: 10px; /* This adds some space between each list item */
 }
+ */
